--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "client-sessions": "^0.8.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.8"
